--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,238 +1,240 @@
 
 .containerr{
-    width: 90%;
-    margin: auto;
-  }
-  .sectionbg{
-    background-color: #d23b38;
-  }
-  .bayrakBorder{
-    margin-right: 2.3rem;
-        display: flex;
-        color: #304c5f;
-        font-size: 1rem;
-        font-weight: 500;
-        line-height: 24px;
-        align-items: center;
-    background-color: #f2f5f7;
-    border: 1px solid #fff;
-    border-radius: 30px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 7px;
-    height: 40px;
-    justify-content: center;
-    width: 100px;
-    
-  }
-  .bayrakBorder h1{
-    color: #304c5f;
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 24px;
-    
-  }
-  .d-flex {
-    position: relative;
-  }
+  width: 90%;
+  margin: auto;
+}
+.sectionbg{
+  background-color: #d23b38;
+}
+.bayrakBorder{
+  margin-right: 2.3rem;
+      display: flex;
+      color: #304c5f;
+      font-size: 1rem;
+      font-weight: 500;
+      line-height: 24px;
+      align-items: center;
+  background-color: #f2f5f7;
+  border: 1px solid #fff;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 7px;
+  height: 40px;
+  justify-content: center;
+  width: 100px;
   
-  .after-element {
-    background: #fff !important;
-    clip-path: polygon(50% 0, 100% 100%, 0 100%);
-    content: "";
-    display: flex;
-    height: 8px;
-    position: absolute;
-    top: 70%;
-    left: 115%; /* Help metninin sağında */
-    transform: translate(-50%, -50%) rotate(180deg); /* Yatay ve dikey ortala, sonra döndür */
-    width: 8px;
-  }
+}
+.bayrakBorder h1{
+  color: #304c5f;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 24px;
   
+}
+.d-flex {
+  position: relative;
+}
+
+.after-element {
+  background: #fff !important;
+  clip-path: polygon(50% 0, 100% 100%, 0 100%);
+  content: "";
+  display: flex;
+  height: 8px;
+  position: absolute;
+  top: 70%;
+  left: 115%; /* Help metninin sağında */
+  transform: translate(-50%, -50%) rotate(180deg); /* Yatay ve dikey ortala, sonra döndür */
+  width: 8px;
+}
+
 
 .d-flex{
-    display: flex !important;
-    color: white;
-    font-size: 1.25rem;
-    font-weight: 500;
+  display: flex !important;
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 500;
 }
 .register{
-    align-items: center;
-    border: 2px solid #fff;
-    border-radius: 30px;
-    display: flex;
-    flex-direction: row;
-    font-size: 1.25rem;
-    font-weight: 500;
-    justify-content: center;
-    max-height: 40px;
-    max-width: 116px;
-    padding: 5px 17px;
-    
+  align-items: center;
+  border: 2px solid #fff;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: row;
+  font-size: 1.25rem;
+  font-weight: 500;
+  justify-content: center;
+  max-height: 40px;
+  max-width: 116px;
+  padding: 5px 17px;
+  
 }
 
 
 .loginn{
-    color: white;
-    font-size: 1.25rem;
-    font-weight: 500;
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 500;
 }
 .navLists li{
-    margin-left: 2rem !important;
+  margin-left: 2rem !important;
 }
-  
-  .header {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 80px !important;
-    background: #d23b38;
-    /* width: 100%; */
-    /* padding: ; */
-    z-index: 1000;
-  }
 
-  .logoDiv img{
-    height: 37.29px !important;
-    width: 150.65px !important;
-  }
-  .navBarSection .logo img{
-    width: 40px;
-  
-  }
-  .header .logo {
-    font-weight: 600;
-    cursor: pointer;
-    align-items: center;
-    justify-content: center;
-  }
-  .btnButton{
-    background-color: #c62828 !important;
-      padding: .6rem;
-      border-radius: 0.375rem !important;
-      color: white;
-      font-size: 15px;
-      border: none;
-      
-      color: white !important;
-  }
-  header li{
-    list-style: none;
-    color: white !important;
-  }
-  
-  
-  li{
-    padding: 0%;
-    margin: 0%;
-  }
-  
-  a{
-    text-decoration: none !important;
-    color: white !important;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .header .navBar {
-      position: fixed;
-      background-color: #d23b38;
-      height: -moz-max-content;
-      height: max-content;
-      width: 80%;
-      border-radius: 1rem;
-      top: -500rem;
-      left: 50%;
-      padding: 1rem;
-      transform: translate(-50%);
-      z-index: 2000;
-      box-shadow: 0 2px 4px rgba(2, 15, 29, 0.904);
-      transition: 0.3s ease-in-out;
-    }
+.header {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px !important;
+  background: #d23b38;
+  /* width: 100%; */
+  /* padding: ; */
+  z-index: 1000;
+}
+
+.logoDiv img{
+  height: 37.29px !important;
+  width: 150.65px !important;
+}
+.navBarSection .logo img{
+  width: 40px;
+
+}
+.header .logo {
+  font-weight: 600;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+}
+.btnButton{
+  background-color: #c62828 !important;
+    padding: .6rem;
+    border-radius: 0.375rem !important;
+    color: white;
+    font-size: 15px;
+    border: none;
     
-     .navLists {
-      flex-direction: column;
-      justify-content: center !important;
-      width: 100%;
-      margin: auto;
-      padding: 0.5rem 0;
-      display: block;
-    }
-    .header .navBar .navLists .navItem {
-      padding: 0.5rem 0;
-    }
-    .header .navBar .navLists .navItem .navLink {
-      color: var(--textColor);
-      font-size: 0.9rem;
-      font-weight: 600;
-    }
-    .header .navBar .navLists .navItem .navLink:hover {
-      color: white;
-    }
-   
-    .header ul li {
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-    .header li .btnButton{
-      justify-content: center !important;
-      align-items: center !important;
-      text-align: center !important;
-      border: 1px solid white;
-      background-color: #2d061b !important;
-      /* background-color: #2d061b !important; */
-    }
-    .header li .btnButton:hover{
-      background-color: #c62828 !important;
-      
-    }
-    .header .navBar .closeNavbar {
-      position: absolute;
-      top: 1rem;
-      right: 1.5rem;
-      color: white;
-    }
-    .header .navBar .closeNavbar:hover {
-      color: white;
-    }
-    .header .activeNavbar {
-      top: 7rem;
-    }
+    color: white !important;
+}
+header li{
+  list-style: none;
+  color: white !important;
+}
+
+
+li{
+  padding: 0%;
+  margin: 0%;
+}
+
+a{
+  text-decoration: none !important;
+  color: white !important;
+}
+
+@media screen and (max-width: 768px) {
+  .header .navBar {
+    position: fixed;
+    background-color: #d23b38;
+    height: -moz-max-content;
+    height: max-content;
+    width: 80%;
+    border-radius: 1rem;
+    top: -500rem;
+    left: 50%;
+    padding: 1rem;
+    transform: translate(-50%);
+    z-index: 2000;
+    box-shadow: 0 2px 4px rgba(2, 15, 29, 0.904);
+    transition: 0.3s ease-in-out;
   }
-  .header .toggleNavbar .icon {
-    font-size: 25px;
+  .bayrakBorder, .register{
+    display: none;
+  }
+  
+   .navLists {
+    flex-direction: column;
+    justify-content: center !important;
+    width: 100%;
+    margin: auto;
+    padding: 0.5rem 0;
+    display: block;
+  }
+  .header .navBar .navLists .navItem {
+    padding: 0.5rem 0;
+  }
+  .header .navBar .navLists .navItem .navLink {
+    color: var(--textColor);
+    font-size: 0.9rem;
+    font-weight: 600;
+  }
+  .header .navBar .navLists .navItem .navLink:hover {
     color: white;
   }
-  
-  
-  @media screen and (min-width: 769px) {
-    .toggleNavbar, .closeNavbar {
-      display: none;
-    }
-    
-    .header .navBar .navLists {
-      width: 100%;
-      display: flex;
-      align-items: center !important;
-      justify-content: center !important;
-      flex-direction: row !important;
-    }
-    .header .navBar .navLists .navItem .navLink {
-      color: var(--textColor);
-      padding: 0 0.45rem;
-      font-size: 0.9rem;
-      font-weight: 500;
-    }
-    .header .navBar .navLists .navItem .navLink:hover {
-      color: var(--primaryColor);
-    }
+ 
+  .header ul li {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .header li .btnButton{
+    justify-content: center !important;
+    align-items: center !important;
+    text-align: center !important;
+    border: 1px solid white;
+    background-color: #2d061b !important;
+    /* background-color: #2d061b !important; */
+  }
+  .header li .btnButton:hover{
+    background-color: #c62828 !important;
     
   }
-  @media screen and (min-width: 960px) {
-    .header .navBar .navLists .navItem {
-      padding: 0 0.7rem;
-    }
+  .header .navBar .closeNavbar {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    color: white;
+  }
+  .header .navBar .closeNavbar:hover {
+    color: white;
+  }
+  .header .activeNavbar {
+    top: 7rem;
+  }
+}
+.header .toggleNavbar .icon {
+  font-size: 25px;
+  color: white;
+}
+
+
+@media screen and (min-width: 769px) {
+  .toggleNavbar, .closeNavbar {
+    display: none;
   }
   
+  .header .navBar .navLists {
+    width: 100%;
+    display: flex;
+    align-items: center !important;
+    justify-content: center !important;
+    flex-direction: row !important;
+  }
+  .header .navBar .navLists .navItem .navLink {
+    color: var(--textColor);
+    padding: 0 0.45rem;
+    font-size: 0.9rem;
+    font-weight: 500;
+  }
+  .header .navBar .navLists .navItem .navLink:hover {
+    color: var(--primaryColor);
+  }
+  
+}
+@media screen and (min-width: 960px) {
+  .header .navBar .navLists .navItem {
+    padding: 0 0.7rem;
+  }
+}
