--- a/src/components/option/option.css
+++ b/src/components/option/option.css
@@ -68,9 +68,11 @@ img svg{
     width: 100%; 
     padding: 0;
   }
+  .option p{
+    display: none;
+  }
   .optionCont {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
   }
   .option p{
